Bug 1731495 - Don't typecheck the pipewire session_handle. r=rmader

Since xdg-desktop-portal 1.10.0, the type is "o" (an object path string)
instead of "s" (a normal string). g_variant_lookup fails if the type
doesn't match exactly, even though both are strings.

Use g_variant_lookup_value to get the field value, telling it not to
typecheck. Use g_variant_dup_string to extract the string, which doesn't
care about the exact type, so this code should work with all versions of
xdg-desktop-portal.

Following a similar fix to OBS, see
https://github.com/obsproject/obs-studio/commit/ef0540c0d7df.

Differential Revision: https://phabricator.services.mozilla.com/D126053